2006-08-03  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Define 30 seconds grace period
	to wait for proxies cleanup on application exit.
	Always use wrappers when operating on Tcl/Ns Dstrings.
	The Ns_ProxyMain explicitly calls Tcl_FindExectuable()
	so the default encoding is properly set. Otherwise troubles
	arise when sending scripts containing paths which in turn
	contain special multinational characters.
	Force-fill in the last argument of the proxy command line
	with some string after the evaluation, as otherwise the 
	previously executed command is shown. This is observed
	only on Linux.

	* nsproxy/nsproxymod.c: Calls Ns_ProxyExit with 30 secs
	graceful timeout.

2006-08-02  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Set pipes in the child proxy to
	close-on-exec otherwise we may block forever if we 
	attempt to kill the proxy running "exec" Tcl command.
	
	Redesigned reaper thread not to block the caller by
	waiting on slave proxy processes to exit.

	The [ns_proxy handle] command accepts one optional argument
	which is interpreted as pool name and only those handles 
	belonging to the given pool are reported.

	* nsd/exec.c: Ns_WaitForProcess() logs also the signal name
	in addition to signal number.

2006-07-30  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/nsthread.h: Removed declaration of things normally
	declared in poll.h. We assume that all platforms that we 
	support have poll implementation in place, thus include the
	poll.h unconditionally.

	* include/ns.h:
	* nsd/nsd.h: config.h is now (again) only included in nsd.h
	as it otherwise causes trouble when linking another TEA compatible
	packages with the server as it re-declares PACKAGE_* stuff.

	* nsproxy/nsproxylib.c: Do not use u_int8/16/32_t typedefs as
	some platforms (Solaris) do not declare them; use uint8/16/32_t
	instead as they are defined everywhere in sys/types.h.
