@@ -1,3 +1,10 @@
+2006-08-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* nsproxy/nsproxylib.c: Improved teardown of nsproxy
+	at process exit. Fixed teardown of idle proxies.
+	Increased default max. count of proxies per pool to 8.
+        Added ns_log's to monitor nsproxy teardown steps.
+
 2006-08-03  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
 
 	* nsproxy/nsproxylib.c: Define 30 seconds grace period
